<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ooyala Download To Own Sample App</string>
    <string name="button_request_bitrate_and_start">Request bitrates and Start</string>
    <string name="button_start">Start</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_reset">Reset</string>
    <string name="button_pause">Pause</string>
    <string name="button_delete">Delete</string>
    <string name="title_activity_offline_analytics_list">Offline Analytics List</string>
    <string name="progress_text">Progress: %.2f %%</string>
    <string name="completed_text">Completed</string>
    <string name="canceled_text">Canceled</string>
    <string name="paused_text">Paused: %.2f %%</string>
    <string name="retry_text">Downloaded percentage: %.2f. Retrying to download ..</string>
    <string name="error_text">Error: %s</string>
    <string name="deletion_completed_text">Deletion completed</string>
    <string name="deletion_failed_text">Deletion failed</string>
    <string name="download_description">Download</string>
</resources>
