<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/progress_text"
              android:layout_width="fill_parent"
              android:layout_height="60dp"
              android:layout_weight="5"
              android:padding="10dp"
              android:textSize="16sp" >
    </TextView>

    <Button
        android:id="@+id/start_button"
        android:layout_weight="1"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:text="@string/button_start"/>
    <Button
        android:id="@+id/cancel_button"
        android:layout_weight="1"
        android:layout_height="60dip"
        android:layout_width="match_parent"
        android:text="@string/button_cancel"/>
    <Button
        android:id="@+id/reset_button"
        android:layout_weight="1"
        android:layout_height="60dip"
        android:layout_width="match_parent"
        android:text="@string/button_reset"/>


</LinearLayout>